# MCPServer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  test.yml
alembic/: README.md  env.py
alembic/versions/: 20260524_0001_initial_database_framework.py  README.md
config/: README.md  browser_search.yaml  logging.yaml
docs/: README.md  database.md  development.md  docker-development.md  docker.md
src/: README.md
src/mcp_server/: README.md  __init__.py  __main__.py  app.py  config.py  logging_config.py  server.py  tool_logging.py
src/mcp_server/adapters/: README.md  __init__.py  baidu_provider.py  bing_provider.py  browser_session.py  database.py  database_models.py  query_history_repository.py  search_cache.py
src/mcp_server/prompts/: README.md  __init__.py  planning.py
src/mcp_server/resources/: README.md  __init__.py  project.py  render.py
src/mcp_server/schemas/: README.md  __init__.py  browser.py  database.py  rendering.py
src/mcp_server/services/: README.md  __init__.py  browser_search.py  office.py  pdf_reader.py  query_history.py  rendering.py  search_results.py
src/mcp_server/tools/: README.md  __init__.py  browser.py  database.py  health.py  office_tools.py  pdf.py  rendering.py
tests/: README.md  test_baidu_provider.py  test_bing_provider.py  test_browser_config.py  test_browser_service.py  test_browser_session.py  test_cli.py  test_config.py  test_database.py  test_logging.py  test_office.py  test_pdf.py  test_render_resources.py  test_rendering.py  test_search_cache.py  test_search_results.py  test_server.py
tests/fixtures/: README.md  baidu_ads.html  baidu_empty.html  baidu_results.html  bing_ads.html  bing_empty.html  bing_results.html
