[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
description = "A Python MCP server scaffold managed with uv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "markdown>=3.6.0",
    "mcp[server]>=1.3.0",
    "playwright>=1.54.0",
    "PyYAML>=6.0.2",
    "sqlalchemy[asyncio]>=2.0.38",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "pypdf>=5.1.0",
    "pypdfium2>=4.30.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
mcp-server = "mcp_server.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.11.0",
    "setuptools>=82.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
